--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,6 @@
 	<name>openflights</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,6 +69,8 @@
 						<goals>
 							<goal>build</goal>
 						</goals>
+						<configuration>
+						<skipTests>true</skipTests></configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -93,48 +93,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<profiles>
-		<profile>
-			<!-- When built in OpenShift the 'openshift' profile will be used when 
-				invoking mvn. -->
-			<!-- Use this profile for any OpenShift specific customization your app 
-				will need. -->
-			<!-- By default that is to put the resulting archive into the 'deployments' 
-				folder. -->
-			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-			<id>openshift</id>
-			<build>
-				<finalName>openflights</finalName>
-				<plugins>
-					<plugin>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>2.1.1</version>
-						<configuration>
-							<outputDirectory>deployments</outputDirectory>
-							<warName>ROOT</warName>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>com.github.trecloux</groupId>
-						<artifactId>yeoman-maven-plugin</artifactId>
-						<version>0.6-SNAPSHOT</version>
-						<configuration>
-							<npmInstallArgs>install -cache=~/app-root/build-dependencies/.npm</npmInstallArgs>
-							<nodePath>/var/lib/openshift/5687c3ec0c1e66f825000230/app-root/build-dependencies/node/bin/node</nodePath>
-							<npmPath>/var/lib/openshift/5687c3ec0c1e66f825000230/app-root/build-dependencies/node/bin/npm</npmPath>
-							<bowerVariant>/var/lib/openshift/5687c3ec0c1e66f825000230/app-root/build-dependencies/node/bin/bower</bowerVariant>
-							<buildTool>/var/lib/openshift/5687c3ec0c1e66f825000230/app-root/build-dependencies/node/bin/grunt</buildTool>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>build</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+
 </project>
