--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,8 @@
 							<goal>build</goal>
 						</goals>
 						<configuration>
-						<skipTests>true</skipTests></configuration>
+							<skipTests>true</skipTests>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -89,6 +90,15 @@
 							<directory>yo/app/components</directory>
 						</fileset>
 					</filesets>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
